--- a/html/example.html
+++ b/html/example.html
@@ -1,1 +1,9 @@
-Prova!
+<html>
+    <head>
+        <title>Titolo!</title>
+    </head>
+
+    <body>
+        <h1>Prova!</h1>
+    </body>
+</html>
