Impostazione pagina base

--- a/html/example.html
+++ b/html/example.html
@@ -1,9 +1,16 @@
 <html>
     <head>
-        <title>Titolo!</title>
+        <title>Pagina d'Esempio</title>
+        <link href="../css/global.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
-        <h1>Prova!</h1>
+        <div id="page">
+            <div id="header"><h2>Header</h2></div>
+            <div id="sidebarLX"><h2>SidebarLX</h2></div>
+            <div id="content"><h2>Content</h2></div>
+            <div id="sidebarRX"><h2>SidebarRX</h2></div>
+            <div id="footer"><h2>Footer</h2></div>
+        </div>
     </body>
 </html>
